package com.michalkubiak.observer;

public interface Observer {
    void update(int number);
}
